Fix landing page columns being too short by 1.

--- a/client/src/core/css/landing.css
+++ b/client/src/core/css/landing.css
@@ -12,7 +12,7 @@
 
 .titleBar {
   grid-column-start: 1;
-  grid-column-end: 8;
+  grid-column-end: 9;
   background-color: rgba(250, 235, 215, 0.6);
   margin-bottom: 0.5rem;
   border-radius: 1rem;
@@ -41,7 +41,7 @@
 
 .teamCard {
   grid-column-start: 6;
-  grid-column-end: 8;
+  grid-column-end: 9;
   background-color: rgba(250, 235, 215, 0.6);
   margin-top: 0.5rem;
   padding: 1rem;
@@ -67,7 +67,6 @@
   top: 0;
   left: 0;
   width: 100%;
-  object-fit: ;
 }
 
 /* .backgroundImage > img {
@@ -77,17 +76,17 @@
 
 .navigationBar {
   grid-column-start: 1;
-  grid-column-end: 8;
+  grid-column-end: 9;
 }
 
 @media only screen and (max-width: 800px) {
   .contentPara {
     grid-column-start: 1;
-    grid-column-end: 8;
+    grid-column-end: 9;
   }
 
   .teamCard {
     grid-column-start: 1;
-    grid-column-end: 8;
+    grid-column-end: 9;
   }
 }
